<resources>
    <string name="app_name">MyYandexProject</string>
    <string name="playlist_market_title">Playlist market</string>
    <string name="settings">Настройки</string>
    <string name="dark_theme">Тёмная тема</string>
    <string name="share_app">Поделится приложением</string>
    <string name="message_to_help">Написать в подержку</string>
    <string name="title_app">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media_library">Медиатека</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="search_page_msg">Сдесь будет поиск</string>
    <string name="media_page_msg">Сдесь будет медиа</string>
    <string name="hint_search">Поиск</string>
    <string name="share_url">https://practicum.yandex.ru/android-developer/</string>
    <string name="practicum_offer_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="share_text">Поделиться приложением</string>
    <string name="email_user">calnikov13@gmail.com</string>
    <string name="email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="email_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="email_info_text">Выберите почтовый клиент</string>
    <string name="test_text">Текстовый текст</string>
    <string name="tracks_not_found">Ничего не нашлось</string>
    <string name="connection_problem">Проблемы со связью</string>
    <string name="check_connection">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="refresh_btn">Обновить</string>
    <string name="looking_for">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="history_empty_title">История ваших треков пока пустая</string>
    <string name="failure_get_song">При загрузке трэка произошла ошибка</string>
    <string name="duration_title">Длительность</string>
    <string name="album_title">Альбом</string>
    <string name="release_year">Год</string>
    <string name="genre_title">Жанр</string>
    <string name="county_title">Страна</string>
    <string name="initial_time">00:00</string>
    <string name="error_extraction_track">Не удалось получить нужный трек.</string>
    <string name="return_to_search">Вернутся к поиску</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="media_library_title">Медиатека</string>
    <string name="media_library_is_empty">Ваша медиатека пуста</string>
    <string name="playlists_is_empty">"Вы не создали ни одного плейлиста"</string>
    <string name="new_playlist_btn">Новый плейлист</string>
    <string name="no_playlist_yet">Вы не создали ни одного плейлиста</string>
    <string name="table_name_favorite">Избранные треки</string>
    <string name="table_name_playlist">Плейлисты</string>
    <string name="menu_search">Поиск</string>
    <string name="menu_media">Медиатека</string>
    <string name="menu_settings">Настройки</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="playlist_name">Название*</string>
    <string name="playlist_description">Описание</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="track_already_in_playlist">Трек уже в плейлисте</string>
    <string name="track_added_to_playlist">Добавлено в плейлист</string>
    <string name="finish_creating_playlist">Завершить создание плейлиста?</string>
    <string name="unsaved_data_will_be_lost">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="image_was_not_selected">Изображение не было выбрано</string>
    <string name="new_playlist_has_been_created">Новый плейлист был создан</string>
    <string name="not_playlist_tracks">В плейлист не добавлено ни одного трека</string>
</resources>