<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="@dimen/main_margin_top"
    android:paddingHorizontal="@dimen/main_padding"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hint_search"
            android:textSize="22sp"
            style="@style/PageTitle"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:orientation="horizontal"
        android:radius="8dp"
        android:background="@drawable/rounded_input_background"
        >
        <EditText
            android:id="@+id/searchInput"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:hint="@string/hint_search"
            android:drawableStart="@drawable/search_icon"
            android:drawablePadding="4dp"
            android:paddingStart="15dp"
            android:layout_weight="1"
            android:background="@null"
            android:inputType="text"
            android:textSize="16sp"
            style="@style/searchInput"
            />
        <ImageView
            android:id="@+id/clearIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/clear_icon"
            android:layout_marginEnd="12dp"
            android:visibility="gone"
            />

    </LinearLayout>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progressBar"
        android:layout_marginTop="120dp"
        android:layout_width="@dimen/circle_size"
        android:layout_height="@dimen/circle_size"
        android:indeterminate="true"
        android:layout_gravity="center"
        android:visibility="gone"
        android:progress="45"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/track_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/songs_history"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <TextView
            android:id="@+id/history_list_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/looking_for"
            style="@style/HistoryTitle"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/history_tracks"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/history_list_title"
            app:layout_constraintBottom_toTopOf="@+id/clear_history_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/clear_history_btn"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/clear_history"
            style="@style/RefreshBtn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/empty_history_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_marginTop="40dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/history_empty_title"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/not_found_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/tracks_not_found"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tracks_not_found"
            style="@style/PlaceholderText"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/error_request_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center|center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/tracks_error_request"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connection_problem"
            style="@style/PlaceholderText"/>

        <TextView
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/check_connection"
            android:gravity="center_horizontal"
            style="@style/PlaceholderText"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/refresh_btn"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginTop="24dp"
            android:text="@string/refresh_btn"
            style="@style/RefreshBtn" />

    </LinearLayout>


</androidx.appcompat.widget.LinearLayoutCompat>