<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    style="@style/BackgroundSetting"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="14dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textSize="22sp"

            style="@style/PageTitle"
            />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/setting_min_size"
        android:layout_marginTop="40dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark_theme"
            android:layout_gravity="start|center_vertical"
            style="@style/SettingText"
            />
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/setting_theme_switcher"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="@dimen/setting_end_margin"
            android:theme="@style/SwitchCompatTheme"
            />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/btn_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/setting_min_size">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:text="@string/share_app"
            style="@style/SettingText" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            app:drawableEndCompat="@drawable/share"
            style="@style/SettingBtn"
            />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/btn_write_support"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/setting_min_size"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message_to_help"
            android:layout_gravity="start|center_vertical"
            style="@style/SettingText"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            app:drawableEndCompat="@drawable/help"
            style="@style/SettingBtn"
            />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/btn_web_page"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/setting_min_size"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_agreement"
            android:layout_gravity="start|center_vertical"
            style="@style/SettingText"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            app:drawableEndCompat="@drawable/right_arrow"
            style="@style/SettingBtn"
            />
    </FrameLayout>

</LinearLayout>