<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/white"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="14dp"
        >
        <TextView
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height='wrap_content'
            android:textSize="14sp"
            app:drawableLeftCompat="@drawable/left_arrow"
            android:padding="5dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textSize="22sp"
            android:layout_marginStart="28dp"
            android:textColor="@color/black"
            />
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="60dp"
        android:layout_marginTop="40dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark_theme"
            android:textSize="16sp"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="16dp"
            android:textColor="@color/black"
            />
        <com.google.android.material.switchmaterial.SwitchMaterial
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="20dp"
            />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="60dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="16dp"
            android:text="@string/share_app"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="20dp"
            app:drawableEndCompat="@drawable/share"
            app:drawableTint="@color/black" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="60dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message_to_help"
            android:textSize="16sp"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="16dp"
            android:textColor="@color/black"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="20dp"
            app:drawableEndCompat="@drawable/help"
            app:drawableTint="@color/black"
            />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="60dp"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Пользовательское соглашение"
            android:textSize="16sp"
            android:layout_gravity="start|center_vertical"
            android:layout_marginStart="16dp"
            android:textColor="@color/black"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="20dp"
            android:drawableTint="@color/black"
            app:drawableEndCompat="@drawable/right_arrow"
            />
    </FrameLayout>

</LinearLayout>