<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.player.activity.AudioPlayer">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/leftBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="24dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/rightBorder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="24dp" />

        <TextView
            android:id="@+id/btnBack"
            style="@style/PageTitle"
            android:layout_width="wrap_content"
            android:layout_height='wrap_content'
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:textSize="14sp"
            app:drawableLeftCompat="@drawable/left_arrow"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="80dp"
            style="@style/MediaImageTrack"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="h,1:1"
            app:layout_constraintEnd_toStartOf="@id/rightBorder"
            app:layout_constraintStart_toEndOf="@id/leftBorder"
            app:layout_constraintTag="imageViewTag"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/track_image_placeholder" />

        <TextView
            android:id="@+id/trackTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="Test test test"
            style="@style/MediaTitle"
            app:layout_constraintEnd_toStartOf="@id/rightBorder"
            app:layout_constraintStart_toEndOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/imageView" />

        <TextView
            android:id="@+id/bandTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="The test"
            style="@style/MediaBandName"
            app:layout_constraintEnd_toStartOf="@id/rightBorder"
            app:layout_constraintStart_toEndOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/trackTitle" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_marginStart="24dp"
            android:layout_marginTop="76dp"
            android:src="@drawable/baseline_library_add_24"
            app:backgroundTint="@color/custom_grey"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/bandTitle"
            app:tint="@android:color/white" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/playerBtn"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            style="@style/MediaPlayBtn"
            app:icon="@drawable/baseline_play_arrow_24"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:iconSize="60dp"
            app:layout_constraintBottom_toBottomOf="@id/fab"
            app:layout_constraintEnd_toStartOf="@id/fab3"
            app:layout_constraintStart_toEndOf="@id/fab"
            app:layout_constraintTop_toTopOf="@id/fab"
            app:shapeAppearanceOverlay="@style/buttomShape" />

        <TextView
            android:id="@+id/currentDuration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text = "@string/initial_time"
            app:layout_constraintEnd_toEndOf="@id/playerBtn"
            app:layout_constraintStart_toStartOf="@id/playerBtn"
            app:layout_constraintTop_toBottomOf="@id/playerBtn" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_marginEnd="24dp"
            android:src="@drawable/baseline_favorite_border_24"
            app:backgroundTint="@color/custom_grey"
            app:layout_constraintBottom_toBottomOf="@id/fab"
            app:layout_constraintEnd_toEndOf="@id/rightBorder"
            app:layout_constraintTop_toTopOf="@id/fab"
            app:layout_constraintVertical_bias="0.0"
            app:tint="@android:color/white" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/descriptionBarrier"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:barrierMargin="32dp"
            app:constraint_referenced_ids="currentDuration" />

        <TextView
            android:id="@+id/fullDurationTitle"
            style="@style/MediaProperty"
            android:layout_width="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/duration_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/descriptionBarrier" />

        <TextView
            android:id="@+id/albumTitle"
            style="@style/MediaProperty"
            android:layout_width="wrap_content"
            android:text="@string/album_title"
            app:layout_constraintStart_toStartOf="@+id/fullDurationTitle"
            app:layout_constraintTop_toBottomOf="@+id/fullDurationTitle" />

        <TextView
            android:id="@+id/yearTitle"
            style="@style/MediaProperty"
            android:layout_width="wrap_content"
            android:text="@string/release_year"
            app:layout_constraintStart_toStartOf="@+id/albumTitle"
            app:layout_constraintTop_toBottomOf="@+id/albumTitle" />

        <TextView
            android:id="@+id/genreTitle"
            style="@style/MediaProperty"
            android:layout_width="wrap_content"
            android:text="@string/genre_title"
            app:layout_constraintStart_toStartOf="@+id/yearTitle"
            app:layout_constraintTop_toBottomOf="@+id/yearTitle" />

        <TextView
            android:id="@+id/countryTitle"
            style="@style/MediaProperty"
            android:layout_width="wrap_content"
            android:text="@string/county_title"
            app:layout_constraintStart_toStartOf="@+id/genreTitle"
            app:layout_constraintTop_toBottomOf="@id/genreTitle" />

        <TextView
            android:id="@+id/durationValue"
            style="@style/MediaPropertyValue"
            android:layout_width="wrap_content"
            android:layout_marginEnd="16dp"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/descriptionBarrier" />

        <TextView
            android:id="@+id/albumValue"
            style="@style/MediaPropertyValue"
            android:layout_width="wrap_content"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="@+id/durationValue"
            app:layout_constraintTop_toBottomOf="@+id/durationValue" />

        <TextView
            android:id="@+id/yearValue"
            style="@style/MediaPropertyValue"
            android:layout_width="wrap_content"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="@+id/albumValue"
            app:layout_constraintTop_toBottomOf="@+id/albumValue" />

        <TextView
            android:id="@+id/genreValue"
            style="@style/MediaPropertyValue"
            android:layout_width="wrap_content"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="@+id/yearValue"
            app:layout_constraintTop_toBottomOf="@+id/yearValue" />

        <TextView
            android:id="@+id/country"
            style="@style/MediaPropertyValue"
            android:layout_width="wrap_content"
            android:text="TextView"
            app:layout_constraintEnd_toEndOf="@+id/genreValue"
            app:layout_constraintTop_toBottomOf="@id/genreValue" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>