<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/titleLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="4dp"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height='wrap_content'
            android:textSize="14sp"
            app:drawableLeftCompat="@drawable/left_arrow"
            android:padding="5dp"
            style="@style/PageTitle"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_playlist"
            android:textSize="22sp"
            android:layout_marginStart="24dp"
            style="@style/PageTitle"
            />

    </LinearLayout>


    <FrameLayout
        android:id="@+id/imageFrame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/titleLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <ImageView
            android:id="@+id/imagePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="26dp"
            app:srcCompat="@drawable/add_image"
            android:cropToPadding="true"
            android:scaleType="center"
            app:layout_constraintDimensionRatio="1:1"
            android:background="@drawable/image_selection_border" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/userImage"
            android:layout_width="312dp"
            android:layout_height="312dp"
            android:scaleType="fitXY"
            app:shapeAppearanceOverlay="@style/roundedPlaylistImageView"
            app:layout_constraintTop_toBottomOf="@id/titleLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </FrameLayout>

    <EditText
        android:id="@+id/playlistTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="16dp"
        android:layout_gravity="center"
        android:hint="@string/playlist_name"
        android:background="@drawable/input_border"
        app:layout_constraintTop_toBottomOf="@+id/imageFrame"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/playlistDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="16dp"
        android:layout_gravity="center"
        android:hint="@string/playlist_description"
        android:background="@drawable/input_border"
        app:layout_constraintTop_toBottomOf="@+id/playlistTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/createPlaylistBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="55dp"
        android:layout_marginHorizontal="17dp"
        android:layout_marginBottom="32dp"
        android:text="Создать"
        style="@style/media_create_new_playlist_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>